Fix image spacing

--- a/components/PlayerCard/NFL/ImageColumn/style.scss
+++ b/components/PlayerCard/NFL/ImageColumn/style.scss
@@ -206,8 +206,9 @@
       opacity:0;
       transition:opacity 0.25s linear 0.1s;
       &:not(.player-x-o){
-        top:auto;
+        top:20px;
         bottom:0;
+        height:100%;
         .mock-draft & {
           top:20px;
           bottom:auto;
